# lastfm-query

./: Cargo.toml
src/: cli.rs  cmd.rs  db.rs  exporter.rs  lastfm.rs  main.rs  paths.rs  util.rs
src/cmd/: mod.rs  recommend.rs  sql.rs  sync.rs
src/lastfm/: api_types.rs  mod.rs
