[package]
name = "lastfm-query"
version = "0.1.0"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2018"

[dependencies]
clap = "2.32"
directories = "1.0"
failure = "0.1"
indicatif = "0.9"
reqwest = "0.9"
rpassword = "2.0"
rusqlite = "0.15"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
